<resources>
    <string name="app_name">iNews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tienich">TIỆN ÍCH</string>
    <string name="thoitiet">Thời tiết</string>
    <string name="xoso">Xổ số</string>
    <string name="giavang">Giá vàng</string>
    <string name="lichviet">Lịch Việt</string>
    <string name="caidat">CÀI ĐẶT NÂNG CAO</string>
    <string name="chedotoi">Chế độ tối</string>
    <string name="loai">Loại vàng</string>
    <string name="mua">Mua (đ/I)</string>
    <string name="ban">Bán (đ/I)</string>
    <string name="facebook_app_id">1191684891734661</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">ca485840888bd4b71f5d3674bc0064a1</string>
    <string name="server_client_id" />

</resources>