<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trang"
    tools:context=".GiaVang.giavang"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutgiavang"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginTop="8dp"
            android:id="@+id/img_giavang_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:padding="5dp"
            android:onClick="backFromGiaVang"
            />
        <TextView
            android:background="@color/xanhreu"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:id="@+id/txt_giavang_tieude"
            android:fontFamily="@font/roboto_bold"
            android:textSize="23sp"
            android:textColor="@color/den"

            android:text="Vàng SCJ"
            android:layout_width="200dp"
            android:layout_height="50dp"/>
        <TextView
            android:id="@+id/txt_giavang_ngay"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"

            android:textSize="18sp"
            android:textStyle="normal"
            android:textColor="@color/den"
            android:text="Ngày cập nhật: 10:37:38 24/09/2022"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_marginTop="5dp"
            android:id="@+id/view_ViecLam_view1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/xam"
            />
        <LinearLayout
            android:background="@color/trang"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.tabs.TabLayout
                app:tabSelectedTextColor="@color/den"
                android:id="@+id/tablayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                app:tabTextColor="@color/den"
                android:background="@color/trang"
                android:contextClickable="true"
                android:textAlignment="center"
                >
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loai"
                    />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mua"
                    />
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ban"
                    />
            </com.google.android.material.tabs.TabLayout>
        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:layout_marginStart="8dp"
            android:id="@+id/viewPaperGiaVang"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <View
            android:id="@+id/view_ViecLam_view2"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:background="@color/xam"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="40dp"
            android:id="@+id/rcv_giavang"/>
    </LinearLayout>


</FrameLayout>